arreglada errata en comentario en codigo de clasificacion

--- a/memoria_trabajo/src/clasificacion.tex
+++ b/memoria_trabajo/src/clasificacion.tex
@@ -376,6 +376,6 @@ test_friedman <- friedman.test(as.matrix(tablatst))
 test_friedman
 
 # como el test nos devuelve un pvalue muy alto, del 0.70, no rechazamos la hipotesis
-# nula, luego NO hay diferencias significativas entre los tres algoritmos
+# nula, luego NO hay diferencias significativas entre ningún par de algoritmos
 # con los conjuntos de datos que hemos utilizado
 \end{lstlisting}
