corrijo errata en regresion

--- a/memoria_trabajo/src/regresion.tex
+++ b/memoria_trabajo/src/regresion.tex
@@ -240,7 +240,7 @@ Tras obtener esta tabla, lanzamos el test, del que obtenemos un p-value de 0.83,
 
 Para realizar esta comparación simplemente utilizaremos el test de Friedman para saber si existe alguna diferencia significativa entre una pareja de algoritmos, si el resultado es que si existe una diferencia significativa aplicaremos el test de Holm como post-hoc para saber entre que dos algoritmos se ha encontrado esa diferencia significativa.
 
-Tras lanzar el test de Friedman nos devuelve un p-value de 0.014, con lo que con un nivel de confianza de más del 98\% podemos rechazar la hipotesis nula de que no existen diferencias significativas entre una pareja de algoritmos, por lo que sabemos que hay al menos un algoritmo que es mejor que otro.
+Tras lanzar el test de Friedman nos devuelve un p-value de 0.014, con lo que con un nivel de confianza de más del 98\% podemos rechazar la hipotesis nula de que no existen diferencias significativas entre al menos una pareja de algoritmos, por lo que sabemos que hay al menos un algoritmo que es mejor que otro.
 
 Si aplicamos el test de Holm obtendremos la siguiente tabla:
 
